@startuml Software_de_Loja_Repositorios_Core_Seguranca
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Software de Loja — Repositório (Módulo: Core e Segurança)

package "Repositório (Interfaces - Core e Segurança)" #FFF0E0 {
  interface UtilizadorRepositorio {
    + buscarPorCredenciais(nomeUtilizador : String, hashPalavraPasse : String) : Utilizador
    + buscarPorId(id : int) : Utilizador
    + guardar(utilizador : Utilizador) : void
    + atualizar(utilizador : Utilizador) : void
    + desativar(id : int) : void
    + verificarSessaoAtiva(id : int) : boolean
  }

  interface LogAuditoriaRepositorio {
    + guardar(log : LogAuditoria) : void
    + atualizar(log : LogAuditoria) : void
    + buscarPendentes() : List<LogAuditoria>
  }
}

package "Repositório (Implementações - Core e Segurança)" #FFF8EE {

  class UtilizadorRepositorioImpl {
    - conexao : Connection
    + buscarPorCredenciais(nomeUtilizador : String, hashPalavraPasse : String) : Utilizador
    + buscarPorId(id : int) : Utilizador
    + guardar(utilizador : Utilizador) : void
    + atualizar(utilizador : Utilizador) : void
    + desativar(id : int) : void
    + verificarSessaoAtiva(id : int) : boolean
  }

  class LogAuditoriaRepositorioImpl {
    - conexao : Connection
    + guardar(log : LogAuditoria) : void
    + atualizar(log : LogAuditoria) : void
    + buscarPendentes() : List<LogAuditoria>
  }
}

' Implementações realizam interfaces
UtilizadorRepositorioImpl ..|> UtilizadorRepositorio
LogAuditoriaRepositorioImpl ..|> LogAuditoriaRepositorio

@enduml
